<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionactivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:id="@+id/que_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_question"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="0"
            android:max="5"
            android:minHeight="50dp"
            style="?android:progressBarStyleHorizontal"/>
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_5"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <TextView
        android:id="@+id/opt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_1"
        android:padding="10dp"
        android:textSize="18sp"
        android:background="@drawable/question_option"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/opt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_2"
        android:padding="10dp"
        android:textSize="18sp"
        android:background="@drawable/question_option"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/opt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_3"
        android:padding="10dp"
        android:textSize="18sp"
        android:background="@drawable/question_option"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/opt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/option_4"
        android:background="@drawable/question_option"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/purple_500"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>


</LinearLayout>